[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/pawn.gd" type="Script" id=1]
[ext_resource path="res://assets/pawn.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 15 )

[sub_resource type="Shader" id=2]

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 48, 48 )

[node name="pawn" type="Sprite"]
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 1 )

[node name="MovementBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovementBox"]
modulate = Color( 0.952941, 0.14902, 0.14902, 1 )
self_modulate = Color( 0.956863, 0, 0, 1 )
material = SubResource( 3 )
shape = SubResource( 4 )
[connection signal="area_entered" from="Hitbox" to="." method="_on_player_entered"]
[connection signal="mouse_entered" from="Hitbox" to="." method="_on_Hitbox_mouse_entered"]
[connection signal="mouse_exited" from="Hitbox" to="." method="_on_Hitbox_mouse_exited"]
[connection signal="mouse_entered" from="MovementBox" to="." method="_on_MovementBox_mouse_entered"]
[connection signal="mouse_exited" from="MovementBox" to="." method="_on_MovementBox_mouse_exited"]
